src/components/hero/hero.scss
@import "../../app.scss";
.hero {
    height: calc(100vh - 100px);
    position: relative;
    overflow: hidden;

    .contentContainer {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: flex-end;
        width: 100%;
        right: 0;
        height: 100%;
        gap: 5rem;
        height: 60vh;
    }

    .textContainer {
        font-size: 2.5rem;
        margin-right: 8rem;
        letter-spacing: 0.5rem;
        margin-top: 5rem;
        @include mobile {
            font-size: 1rem;
            margin: auto;
        }
        @include tablet {
            margin: auto;
        }
    }

    .button {
        button {
            border: 1.5px solid white;
            border-radius: 2rem;
            background-color: transparent;
            color: white;
            cursor: pointer;

            font-weight: 600;
            transition: all 300ms ease;
            padding: 1rem;
            width: 9rem;
            letter-spacing: 0.1rem;

            &:hover {
                background-color: white;
                color: #9b9b9b; 
            }
            @include mobile {
                padding: 0.5rem;
                font-size: 0.5rem;
                margin: auto;
                width: auto;
            }
        }
    }

    .imageContainer {
        height: 100%; 
        position: absolute;
        left: 0;
        bottom: 0;
        z-index: -1;
        max-width: 100%;
        @include mobile {
            height: 299px;
            max-width: 425px;
            float: none;
            display: block;
        }
        @include tablet {
            height: auto;
        }
        

        img {
            width: auto;
            height: 100%;
            max-width: 100%;
        }
    }

    .slidingTextContainer,
    .slidingTextContainer2 {
        position: absolute;
        font-size: 30vh;
        bottom: 0;
        white-space: nowrap;
        font-weight: 300;
        color: white;
        z-index: -1;
        display: inline-block;
        animation: marquee 20s linear infinite;

        @include mobile {
            font-size: 20vh;
        }
        @include tablet {
            font-size: 25vh;
        }
    }

    .slidingTextContainer2 {
        animation-delay: 10s;
        opacity: 0;
    }


    @keyframes marquee {
        0% {
          transform: translateX(100%);
        }
        100% {
          transform: translateX(-100%);
        }
    }
      
}

